Zuvor: -90° erfolgreich, Schatten stört. Hier: Schatten weg-Versuch.

--- a/index.html
+++ b/index.html
@@ -109,13 +109,6 @@
       --cubeSize: calc(3 * var(--cell) + 2 * var(--cell-gap));
       --pairHeight: calc(2 * var(--cubeSize) + var(--cell-gap));
 
-      /* ✅ Innenboden-Maße (für Kugelmittelpunkt als Transform-Origin) */
-      --innerLeft: var(--step);
-      --innerTop:  var(--step);
-      --innerSize: calc(6 * var(--cell) + 5 * var(--cell-gap));
-      --ball-x: calc(var(--innerLeft) + (var(--innerSize) / 2));
-      --ball-y: calc(var(--innerTop)  + (var(--innerSize) / 2));
-
       box-shadow:
         10px 18px 42px rgba(0,0,0,0.55),
         3px 6px 16px rgba(0,0,0,0.35);
@@ -223,38 +216,16 @@
       clip-path: inset(var(--step) var(--step) var(--step) var(--step));
     }
 
-    /* ✅ HIER: Rotation um Kugelmittelpunkt (Schatten dreht mit, weil ::before am Group hängt) */
     .w3w2KipGroup{
       position:absolute;
       inset:0;
-      transform-origin: var(--ball-x) var(--ball-y);
-      transform: rotate(-90deg);
+      transform: none;
     }
 
+    /* ✅ SCHATTEN KOMPLETT WEG (Phantom-Teppich entfernt) */
     .w3w2KipGroup::before{
       content:"";
-      position:absolute;
-
-      left: calc(4 * var(--step));
-      top:  calc(1 * var(--step));
-      width: var(--cubeSize);
-      height: var(--pairHeight);
-
-      z-index: 0;
-      pointer-events:none;
-
-      background:
-        radial-gradient(120% 80% at 55% 60%,
-          rgba(0,0,0,0.38) 0%,
-          rgba(0,0,0,0.24) 32%,
-          rgba(0,0,0,0.00) 72%),
-        linear-gradient(0deg,
-          rgba(0,0,0,0.28) 0%,
-          rgba(0,0,0,0.00) 34%);
-
-      filter: blur(10px);
-      transform: translate(8px, 10px);
-      opacity: 0.95;
+      display:none;
     }
 
     .w3w2Bundle{
